// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`cdm generate cdm with additional apps 1`] = `
Object {
  "_version": "3.1.0",
  "applications": Object {
    "manage.news": Object {
      "sap.app": Object {
        "crossNavigation": Object {
          "inbounds": Object {
            "NewsArticle-display": Object {
              "action": "display",
              "semanticObject": "NewsArticle",
              "title": "Manage News",
            },
          },
        },
        "id": "manage.news",
        "title": "Manage News",
      },
    },
    "masterDetail-display": Object {
      "sap.app": Object {
        "crossNavigation": Object {
          "inbounds": Object {
            "masterDetail-display": Object {
              "action": "display",
              "semanticObject": "masterDetail",
              "title": "Manage Products",
            },
          },
        },
        "id": "sap.ui.demoapps.rta.fe",
        "subTitle": "UI Adaptation at Runtime for SAP Fiori Elements",
        "title": "Manage Products",
      },
      "sap.platform.runtime": Object {
        "componentProperties": Object {
          "url": "/test-resources/sap/ui/demoapps/demokit/rta/fe",
        },
      },
      "sap.ui": Object {
        "technology": "UI5",
      },
      "sap.ui5": Object {
        "componentName": "sap.ui.demoapps.rta.fe",
      },
    },
    "my.app": Object {
      "sap.app": Object {
        "crossNavigation": Object {
          "inbounds": Object {
            "my-app": Object {
              "action": "app",
              "semanticObject": "my",
              "signature": Object {
                "additionalParameters": "allowed",
              },
              "subTitle": "My App Description",
              "title": "My App",
            },
          },
        },
        "id": "my.app",
        "title": "My App",
      },
      "sap.platform.runtime": Object {
        "componentProperties": Object {
          "asyncHints": Object {},
          "url": "/my/app",
        },
      },
      "sap.ui": Object {
        "technology": "UI5",
      },
      "sap.ui5": Object {
        "componentName": "my.app",
      },
    },
    "my.app2": Object {
      "sap.app": Object {
        "crossNavigation": Object {
          "inbounds": Object {
            "my-app2": Object {
              "action": "app2",
              "semanticObject": "my",
              "signature": Object {
                "additionalParameters": "allowed",
              },
              "subTitle": "My App Description 2",
              "title": "My App 2",
            },
          },
        },
        "id": "my.app2",
        "title": "My App 2",
      },
      "sap.platform.runtime": Object {
        "componentProperties": Object {
          "asyncHints": Object {},
          "url": "/my/app2",
        },
      },
      "sap.ui": Object {
        "technology": "UI5",
      },
      "sap.ui5": Object {
        "componentName": "my.app2",
      },
    },
    "product_display": Object {
      "sap.app": Object {
        "crossNavigation": Object {
          "inbounds": Object {
            "product-display": Object {
              "action": "display",
              "semanticObject": "product",
              "title": "Display Product Catalog",
            },
          },
        },
        "id": "sap.ui.demoapps.rta.fev4",
        "subTitle": "Fiori Elements v4",
        "title": "Display Product Catalog",
      },
      "sap.platform.runtime": Object {
        "componentProperties": Object {
          "url": "/test-resources/sap/ui/demoapps/demokit/rta/fev4",
        },
      },
      "sap.ui": Object {
        "technology": "UI5",
      },
      "sap.ui5": Object {
        "componentName": "sap.ui.demoapps.rta.fev4",
      },
    },
  },
  "catalogs": Object {
    "homeCatalog": Object {
      "identification": Object {
        "id": "homeCatalog",
        "title": "Homepage Apps",
      },
      "payload": Object {
        "viz": Array [
          "VIZ:my.app",
          "VIZ:my.app2",
        ],
      },
    },
  },
  "groups": Object {},
  "pages": Object {
    "SAP_BASIS_PG_UI_MYHOME": Object {
      "identification": Object {
        "id": "SAP_BASIS_PG_UI_MYHOME",
      },
      "payload": Object {
        "layout": Object {
          "sectionOrder": Array [
            "homeAppsSection",
          ],
        },
        "sections": Object {
          "homeAppsSection": Object {
            "default": true,
            "id": "homeAppsSection",
            "layout": Object {
              "vizOrder": Array [
                "my.app",
                "my.app2",
              ],
            },
            "title": "Recently Added Apps",
            "viz": Object {
              "my.app": Object {
                "id": "my.app",
                "vizId": "VIZ:my.app",
              },
              "my.app2": Object {
                "id": "my.app2",
                "vizId": "VIZ:my.app2",
              },
            },
          },
        },
      },
    },
  },
  "site": Object {
    "payload": Object {
      "groupsOrder": Array [],
    },
  },
  "visualizations": Object {
    "VIZ:masterDetail-display": Object {
      "businessApp": "masterDetail-display",
      "vizConfig": Object {
        "sap.app": Object {
          "subTitle": "UI Adaptation at Runtime for SAP Fiori Elements",
          "title": "Manage Products",
        },
        "sap.flp": Object {
          "target": Object {
            "type": "URL",
            "url": "#masterDetail-display",
          },
        },
      },
      "vizType": "sap.ushell.StaticAppLauncher",
    },
    "VIZ:my.app": Object {
      "businessApp": "my.app",
      "vizConfig": Object {
        "sap.app": Object {
          "subTitle": "My App Description",
          "title": "My App",
        },
        "sap.flp": Object {
          "target": Object {
            "appId": "my.app",
            "inboundId": "my-app",
            "parameters": Array [
              Object {
                "name": "sap-ui-tech-hint",
                "value": "UI5",
              },
            ],
          },
        },
        "sap.ui": Object {
          "icons": Object {
            "icon": "sap-icon://vds-file",
          },
        },
      },
      "vizType": "sap.ushell.StaticAppLauncher",
    },
    "VIZ:my.app2": Object {
      "businessApp": "my.app2",
      "vizConfig": Object {
        "sap.app": Object {
          "subTitle": "My App Description 2",
          "title": "My App 2",
        },
        "sap.flp": Object {
          "target": Object {
            "appId": "my.app2",
            "inboundId": "my-app2",
            "parameters": Array [
              Object {
                "name": "sap-ui-tech-hint",
                "value": "UI5",
              },
            ],
          },
        },
        "sap.ui": Object {
          "icons": Object {
            "icon": "sap-icon://vds-file",
          },
        },
      },
      "vizType": "sap.ushell.StaticAppLauncher",
    },
    "VIZ:product_display": Object {
      "businessApp": "product_display",
      "vizConfig": Object {
        "sap.app": Object {
          "subTitle": "Fiori Elements v4",
          "title": "Display Product Catalog",
        },
        "sap.flp": Object {
          "target": Object {
            "type": "URL",
            "url": "#product-display",
          },
        },
      },
      "vizType": "sap.ushell.StaticAppLauncher",
    },
  },
}
`;

exports[`cdm generate cdm without any apps 1`] = `
Object {
  "_version": "3.1.0",
  "applications": Object {
    "manage.news": Object {
      "sap.app": Object {
        "crossNavigation": Object {
          "inbounds": Object {
            "NewsArticle-display": Object {
              "action": "display",
              "semanticObject": "NewsArticle",
              "title": "Manage News",
            },
          },
        },
        "id": "manage.news",
        "title": "Manage News",
      },
    },
    "masterDetail-display": Object {
      "sap.app": Object {
        "crossNavigation": Object {
          "inbounds": Object {
            "masterDetail-display": Object {
              "action": "display",
              "semanticObject": "masterDetail",
              "title": "Manage Products",
            },
          },
        },
        "id": "sap.ui.demoapps.rta.fe",
        "subTitle": "UI Adaptation at Runtime for SAP Fiori Elements",
        "title": "Manage Products",
      },
      "sap.platform.runtime": Object {
        "componentProperties": Object {
          "url": "/test-resources/sap/ui/demoapps/demokit/rta/fe",
        },
      },
      "sap.ui": Object {
        "technology": "UI5",
      },
      "sap.ui5": Object {
        "componentName": "sap.ui.demoapps.rta.fe",
      },
    },
    "product_display": Object {
      "sap.app": Object {
        "crossNavigation": Object {
          "inbounds": Object {
            "product-display": Object {
              "action": "display",
              "semanticObject": "product",
              "title": "Display Product Catalog",
            },
          },
        },
        "id": "sap.ui.demoapps.rta.fev4",
        "subTitle": "Fiori Elements v4",
        "title": "Display Product Catalog",
      },
      "sap.platform.runtime": Object {
        "componentProperties": Object {
          "url": "/test-resources/sap/ui/demoapps/demokit/rta/fev4",
        },
      },
      "sap.ui": Object {
        "technology": "UI5",
      },
      "sap.ui5": Object {
        "componentName": "sap.ui.demoapps.rta.fev4",
      },
    },
  },
  "catalogs": Object {
    "homeCatalog": Object {
      "identification": Object {
        "id": "homeCatalog",
        "title": "Homepage Apps",
      },
      "payload": Object {
        "viz": Array [],
      },
    },
  },
  "groups": Object {},
  "pages": Object {
    "SAP_BASIS_PG_UI_MYHOME": Object {
      "identification": Object {
        "id": "SAP_BASIS_PG_UI_MYHOME",
      },
      "payload": Object {
        "layout": Object {
          "sectionOrder": Array [
            "homeAppsSection",
          ],
        },
        "sections": Object {
          "homeAppsSection": Object {
            "default": true,
            "id": "homeAppsSection",
            "layout": Object {
              "vizOrder": Array [],
            },
            "title": "Recently Added Apps",
            "viz": Object {},
          },
        },
      },
    },
  },
  "site": Object {
    "payload": Object {
      "groupsOrder": Array [],
    },
  },
  "visualizations": Object {
    "VIZ:masterDetail-display": Object {
      "businessApp": "masterDetail-display",
      "vizConfig": Object {
        "sap.app": Object {
          "subTitle": "UI Adaptation at Runtime for SAP Fiori Elements",
          "title": "Manage Products",
        },
        "sap.flp": Object {
          "target": Object {
            "type": "URL",
            "url": "#masterDetail-display",
          },
        },
      },
      "vizType": "sap.ushell.StaticAppLauncher",
    },
    "VIZ:product_display": Object {
      "businessApp": "product_display",
      "vizConfig": Object {
        "sap.app": Object {
          "subTitle": "Fiori Elements v4",
          "title": "Display Product Catalog",
        },
        "sap.flp": Object {
          "target": Object {
            "type": "URL",
            "url": "#product-display",
          },
        },
      },
      "vizType": "sap.ushell.StaticAppLauncher",
    },
  },
}
`;
